<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textViewTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/title"
                        android:layout_margin="8dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:hint="@string/titlee"
                        android:inputType="text"
                        android:textSize="20sp"
                        android:layout_margin="8dp"
                        android:backgroundTint="@android:color/holo_blue_bright"
                        android:textColor="@android:color/white" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textViewYear"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/yearr"
                        android:layout_margin="8dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/Year"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/year"
                        android:layout_weight="0.5"
                        android:inputType="text"
                        android:textSize="20sp"
                        android:layout_margin="8dp"
                        android:backgroundTint="@android:color/holo_blue_bright"
                        android:textColor="@android:color/white" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textViewRunTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/runtime"
                        android:layout_margin="8dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/RunTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/runtimee"
                        android:inputType="text"
                        android:textSize="20sp"
                        android:layout_margin="8dp"
                        android:layout_weight="0.5"
                        android:backgroundTint="@android:color/holo_blue_bright"
                        android:textColor="@android:color/white" />
                    <TextView
                        android:id="@+id/min"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:text="@string/min"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/white" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textViewActors"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/actorss"
                        android:layout_margin="8dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"/>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/actors"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/actors"
                        android:layout_weight="0.5"
                        android:inputType="text"
                        android:textSize="20sp"
                        android:layout_margin="8dp"
                        android:backgroundTint="@android:color/holo_blue_bright"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
            <ImageButton
                android:id="@+id/theImageButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewDirector"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/director"
                android:layout_margin="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/directorr"
                android:layout_weight="0.5"
                android:inputType="text"
                android:textSize="20sp"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/holo_blue_bright"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewGenre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/genre"
                android:layout_margin="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/genree"
                android:layout_weight="0.5"
                android:inputType="text"
                android:textSize="20sp"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/holo_blue_bright"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textViewPlot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plot"
            android:layout_margin="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextPlot"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/plott"
            android:layout_weight="1"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <info.hoang8f.widget.FButton
                android:id="@+id/AddToCalendar"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_to_calendar"
                android:textColor="@android:color/black"
                app:fButtonColor="@color/btn"
                app:shadowColor="@android:color/black"
                app:shadowEnabled="true"
                app:shadowHeight="5dp"
                app:cornerRadius="5dp"/>

            <info.hoang8f.widget.FButton
                android:id="@+id/backSearch"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/back"
                android:textColor="@android:color/black"
                app:fButtonColor="@color/btn"
                app:cornerRadius="5dp"
                app:shadowColor="@android:color/black"
                app:shadowEnabled="true"
                app:shadowHeight="5dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>